<?xml version="1.0"?>
<package format="2">
  <name>zmq_network</name>
  <version>0.0.0</version>
  <description>The zmq_network package</description>
  <maintainer email="avees@todo.todo">avees</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <export>
  </export>
</package>
